fix weird delay when shifting left and right on projects. extract group out of state as it will no longer change

--- a/src/components/ProjectSquare/ProjectSquare.scss
+++ b/src/components/ProjectSquare/ProjectSquare.scss
@@ -32,7 +32,7 @@
     width: 100%;
     // margin: 1rem 1rem 0 1rem;
     border-radius: 1rem;
-    transition: transform 300ms ease;
+    transition: transform 400ms ease;
     position: absolute;
     left: 0px;
     top: 0px;
